v0.3.0
* Editor can place enemies, characters, objects
* Editor can save levels
* Game can load saved levels
* Editor can load custom levels to edit
* Enemies defined by data
* Treasure chests and gold tracking
* Added skeleton enemy

v0.4.0
* Multiple characters on a map
* Editor handles multiple characters
* Better editor experience
* Objects/Characters defined by data
* Editor can save/load campaigns
* Ability to save/load single maps
* Combat turns
* Ability to start/load a campaign
* Very minimal structure for equipment

NOTES: v0.4.0 is not compatible with maps or saves from earlier versions.

v0.5.0
* Start of triggers system
* Win conditions on maps
* Portals
* Ability to put equipment in objects
* More "true to original" menus
* More map tiles
* At least two pieces of equipment in base game
* Ability to remove and equip equipment to characters
* Minimal enemy AI
* Campaign progression through completing maps
* Get campaigns working completely