@@ -2,6 +2,11 @@ import React, { Component } from 'react';
 import { connect } from 'react-redux';
 import { Container, Text, Canvas } from '@bucky24/react-canvas';
 
+import Button from '../../common/Button';
+
+import { getActiveCampaign } from '../store/getters/campaign';
+import { Panes, setUIPane } from '../store/ducks/ui';
+
 class WonGame extends Component {
 	constructor(props) {
 		super(props);
@@ -10,7 +15,8 @@ class WonGame extends Component {
 	}
 
 	render() {
-		const { width, height, setPane } = this.props;
+		const { width, height, setPane, activeCampaign } = this.props;
+
 		return (<Canvas
 			width={width}
 			height={height}
@@ -19,16 +25,42 @@ class WonGame extends Component {
 				x={200}
 				y={200}
 			>You win!</Text>
+			{ activeCampaign && <Button
+				x={200}
+				y={250}
+				width={200}
+				height={50}
+				text="Continue Campaign"
+				onClick={() => {
+					setPane(Panes.CAMPAIGN);
+				}}
+			/> }
+			{ !activeCampaign && <Button
+				x={200}
+				y={250}
+				width={200}
+				height={50}
+				text="Continue"
+				onClick={() => {
+					setPane(Panes.SAVE_LOAD);
+				}}
+			/> }
 		</Canvas>);
 	}
 }
 
 const mapStateToProps = (state) => {
-	return {};
+	return {
+		activeCampaign: getActiveCampaign(state),
+	};
 };
 
 const mapDispatchToProps = (dispatch) => {
-	return {};
+	return {
+		setPane: (pane) => {
+			dispatch(setUIPane(pane));
+		},
+	};
 };
 
 export default connect(mapStateToProps, mapDispatchToProps)(WonGame);
