@@ -1,7 +1,3 @@
-For v0.5.0
-* More enemies
-* Handle saving and loading character hp
-
 For v0.6.0
 * Handle conditions that can't repeat
 * Add ability to show message boxes and dialog w/ triggers
@@ -15,6 +11,7 @@ For v0.6.0
 * Better asset names in editor
 * Properly handle character death in both maps and scenarios
 * Better enemy AI - pathfinding, real damage,  action points
+* Basics for data validation
 
 For v0.7.0
 * Editor for custom characters
@@ -24,3 +21,6 @@ For v0.7.0
 * Editor for equipment
 * True to original enemy AI (fleeing after attack, summoning)
 * Equipment has effects
+* Three full campaign missions from original game
+* Custom map borders for campaigns, and selection like original game
+* Full data validation and version control/conversion
