@@ -31,4 +31,5 @@ v0.5.0
 * Ability to remove and equip equipment to characters
 * Minimal enemy AI
 * Campaign progression through completing maps
-* Get campaigns working completely
+* Get campaigns working
+* Properly exiting the game when win codition met
